--- a/lab3-page3.html
+++ b/lab3-page3.html
@@ -9,6 +9,7 @@
 <body>
     <!-- 
     EMMET COMMAND: 
+    form[action="test.php" method="POST"]>label[for="first"]+br*2+input[type="text" name="first" id="first"]+br*2+label[for="last"]+input[type="text"name="last"id="last"]+br*2+label[for="age"]+input[type="number"name="age"id="last"]+br*2+input[type="submit"value="submit form"]
     -->
     <form action="test.php" method="POST">  
         <label for="first"></label>
